--- a/addons/myoverview/templates/index.html
+++ b/addons/myoverview/templates/index.html
@@ -30,7 +30,7 @@
             <mm-loading hide-until="courses.loaded" ng-show="tabShown == 'courses'" class="mm-loading-center">
                 <div class="row row-no-padding padding-bottom" ng-show="!showFilter">
                     <div class="col-10 text-left">
-                        <a ng-if="courses[courses.selected] && courses[courses.selected].length > 5" class="button button-dark button-icon icon ion-funnel" ng-click="switchFilter()"></a>
+                       <!-- <a ng-if="courses[courses.selected] && courses[courses.selected].length > 5" class="button button-dark button-icon icon ion-funnel" ng-click="switchFilter()"></a> -->
                     </div>
                     <div class="col text-center">
                         <div class="item-select mm-full-width-centered">
